--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-cli-alcatraz-client",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "Javascript client that communicates with the Alcatraz PCI-compliant data store",
   "directories": {
     "doc": "doc",
     "test": "tests"
