--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,6 @@
     "qunit": "~1.17.1"
   },
   "devDependencies": {
-    "alcatraz-client-js": "~0.0.1"
+    "alcatraz-client-js": "0.0.1"
   }
 }
